# pydantic-stuff

./: LICENSE  README.md  pyproject.toml  requirements.txt
country-region-codes/: country.py
